tests/diagnostics_golden/diag_anonymous_access_reassign.txt
Diagnostics Golden: Removed Access Type Definition
Source: tests/negative/neg_own_anon_reassign.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_anon_reassign.safe:10:21: error: removed source construct `access_type_definition` is not allowed
  |
  | 10 |    type data_ptr is access data;
  |    |                     ^~~~~~
  |
  note: PR11.8e infers references from recursive record types; named access types are removed
------------------------------------------------------------------------
